--- a/StationMonitor/appsettings.json
+++ b/StationMonitor/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "StationContext": "User ID=postgres;Password=947601.;Host=127.0.0.1;Port=5433;Database=db_station"
+    "StationContext": "User ID=postgres;Password=senha;Host=127.0.0.1;Port=5433;Database=db_station"
   },
   "Logging": {
     "LogLevel": {
